2026-05-18: fixed a few bugs with LOS and darkness visibility and automap visibility with the help of co-pilot.